# reth-poa-example

./: Cargo.toml  LICENSE  README.md  run1.sh  run2.sh
assets/: genesis.json
scripts/: follower.sh  producer.sh  send_transaction.sh
src/: main.rs  poa_follower.rs  poa_miner.rs
